Added support for multiple concurrent contexts.

--- a/profile/Makefile
+++ b/profile/Makefile
@@ -1,5 +1,5 @@
 CXX=g++ -m64
-CXXFLAGS=-Iobjs/ -Irapidjson/include/ -g3 -O3 -Wall -Werror -Wextra -std=c++11
+CXXFLAGS=-Iobjs/ -Irapidjson/include/ -g3 -O3 -Wall -Werror -Wextra -std=c++11 
 
 LIB_NAME=libprofile
 OBJDIR=objs
@@ -18,14 +18,14 @@ clean:
 veryclean:
 		/bin/rm -rf $(OBJDIR) *~ $(LIB_NAME).o; cd $(PCMDIR); make clean
 
-OBJS=$(OBJDIR)/profile_ctx.o $(OBJDIR)/profile.o
+OBJS=$(OBJDIR)/tasksys.o $(OBJDIR)/profile_ctx.o $(OBJDIR)/profile.o
 PCMOBJS=$(PCMDIR)/cpucounters.o $(PCMDIR)/client_bw.o $(PCMDIR)/pci.o $(PCMDIR)/msr.o
 
 $(LIB_NAME).o: $(OBJS) $(PCMOBJS) dirs
 		ld -r $(OBJS) $(PCMOBJS) -o $@
 
 $(OBJDIR)/%.o: %.cpp dirs
-		$(CXX) $< $(CXXFLAGS) -c -o $@
+		$(CXX) $< $(CXXFLAGS) -c -o $@ -lpthread
 
 $(PCMDIR)/%.o: $(PCMDIR)/%.cpp 
 		cd $(PCMDIR); make
