Partial support for tasks with ptrhreads.

--- a/examples/profile/Makefile
+++ b/examples/profile/Makefile
@@ -7,8 +7,8 @@ ISPCFLAGS=-O2 --profile --target=sse4-x2 --arch=x86-64
 APP_NAME=test
 OBJDIR=objs
 
-TASKSYS_OBJ=$(OBJDIR)/tasksys.o
-TASKSYS_LIB=-lpthread
+#TASKSYS_OBJ=$(OBJDIR)/tasksys.o
+#TASKSYS_LIB=-lpthread
 
 default: $(APP_NAME)
 
@@ -20,10 +20,10 @@ dirs:
 clean:
 		/bin/rm -rf $(OBJDIR) *~ $(APP_NAME) profile_*
 
-OBJS=$(OBJDIR)/test.o $(OBJDIR)/foo_ispc.o $(OBJDIR)/instrument.o $(TASKSYS_OBJ)
+OBJS=$(OBJDIR)/test.o $(OBJDIR)/foo_ispc.o $(OBJDIR)/instrument.o #$(TASKSYS_OBJ)
 
 $(APP_NAME): dirs $(OBJS)
-		$(CXX) $(CXXFLAGS) -o $@ $(OBJS) -lm $(TASKSYS_LIB)
+		$(CXX) $(CXXFLAGS) -o $@ $(OBJS) -lm -lpthread
 
 $(OBJDIR)/%.o: %.cpp
 		$(CXX) $< $(CXXFLAGS) -c -o $@
